修复方法javadoc问题